[gd_scene format=3 uid="uid://iyto7vy3t4vu"]

[ext_resource type="Script" uid="uid://cg2x1b33sdavc" path="res://src/objects/player/player.gd" id="1_bxhu7"]
[ext_resource type="Texture2D" uid="uid://3sp0ractpnii" path="res://assets/placeholders/player_marx_placeholder.png" id="2_7nd6e"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hdm51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1r1iw"]
size = Vector2(62, 62)

[node name="Player" type="AnimatableBody2D" unique_id=563617267 node_paths=PackedStringArray("RayUP", "RayDown", "RayLeft", "RayRight")]
z_index = 1
physics_material_override = SubResource("PhysicsMaterial_hdm51")
script = ExtResource("1_bxhu7")
RayUP = NodePath("RayUp")
RayDown = NodePath("RayDown")
RayLeft = NodePath("RayLeft")
RayRight = NodePath("RayRight")
metadata/_custom_type_script = "uid://cg2x1b33sdavc"

[node name="Camera2D" type="Camera2D" parent="." unique_id=1318600418]
position_smoothing_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1377544454]
texture = ExtResource("2_7nd6e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1193379640]
shape = SubResource("RectangleShape2D_1r1iw")

[node name="RayUp" type="RayCast2D" parent="." unique_id=106146338]
unique_name_in_owner = true
target_position = Vector2(0, -40)
collision_mask = 3

[node name="RayDown" type="RayCast2D" parent="." unique_id=1746537471]
unique_name_in_owner = true
target_position = Vector2(0, 40)
collision_mask = 3

[node name="RayLeft" type="RayCast2D" parent="." unique_id=1666844285]
unique_name_in_owner = true
target_position = Vector2(-40, 0)
collision_mask = 3

[node name="RayRight" type="RayCast2D" parent="." unique_id=1374064437]
unique_name_in_owner = true
target_position = Vector2(40, 0)
collision_mask = 3

[node name="Label" type="Label" parent="." unique_id=1854671963]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_right = 33.0
offset_bottom = 23.0
grow_horizontal = 2
text = "no mask"
